data/derived/comb/progs/unify/prog1320.ml.out
Characters 122-123:
  if head = List.hd (listReverse w)
                                 ^
Error: This expression has type string but an expression was expected of type
         'a list
